--- a/_posts/2025-04-17-Ito.md
+++ b/_posts/2025-04-17-Ito.md
@@ -11,42 +11,78 @@ toc:
   sidebar: left
 ---
 
-# Understanding Itô's Formula Intuitively
 
-Recall the SDE form:
+# Ito's Integral
+Recall the stochastic differential equation (SDE) form:
 
 $$
 dX_t = \mu(X_t, t)\, dt + \sigma(X_t, t)\, dW_t, \quad X_0 = x_0.
 $$
 
-For now, we only consider $$dW_t$ to be the increments of brownian motion. To avoid confusion, the rest of the formula will substitute $$$dW_t$ with $$dB_t$$.
+For simplicity, we'll focus on the driving noise term and replace $$dW_t$$ with $$dB_t$$, where $$B_t$$ is a standard Brownian motion (Wiener process).
 
-Now we can take the integral of the above formula to be 
+Integrating both sides gives:
 
 $$
-\int dX_t = \int \mu(X_t, t)\, dt + \int \sigma(X_t, t)\, dB_t
+X_T - X_0 = \int_0^T \mu(X_t, t)\, dt + \int_0^T \sigma(X_t, t)\, dB_t.
 $$
 
+The first integral is a standard Riemann integral—familiar and deterministic. But the second term is trickier: it's a stochastic integral with respect to the highly irregular paths of Brownian motion. We haven't yet defined what $$\int f(t) \, dB_t$$ even means.
 
+This note builds intuition for why stochastic integration works  by exploring two key properties of Brownian motion paths: total variation and quadratic variation.
 
-The first part looks exactly the same as ordinary integral when dt is basically a number.
+## Total Variation
 
-But the real surprise is the second part, which is integrating on random variables (increments in brownian motion). And we haven't define such integration over $$dB_t$$
+Consider a partition of the interval $$[0, T]$$ into $$n$$ equal parts: $$t_k = k \cdot \Delta t$$, where $$\Delta t = T/n$$ and $$k = 0, 1, \dots, n-1$$.
 
-This note aims to build intuition for that term by focusing on the special properties of Brownian motion $$B_t$$.
+The **total variation** along this partition is the sum of absolute increments:
 
-## Quadratic Variation of Brownian Motion
+$$
+V_n = \sum_{k=0}^{n-1} |\Delta B_{t_k}| = \sum_{k=0}^{n-1} |B_{t_{k+1}} - B_{t_k}|,
+$$
 
-Remember that for a brownian motion, an important property of it is that $$B_t-B_s \sim \mathcal{N}(0,t-s), \ \ t>s$$
+where each $$\Delta B_{t_k} \sim \mathcal{N}(0, \Delta t)$$ independently.
 
-Now for a given time interval $$[0,T]$$, we can divide the such interval in small interval with $$t_k = \frac{T}{n}k$$ and denote $$\Delta t = \frac{T}{n}$$. Now we can discuss the properties of 
+Why use absolute values? They measure the "total distance traveled" by the path, regardless of direction.
 
-$$\sum_{k=0}^{n-1}(B_{t_{k+1}}-B_{t_k})$$, or $$\sum_{k=0}^{n-1}\Delta B_{t_k}$$ where $$\Delta B_{t_k} \sim \mathcal{N}(0,\frac{T}{n})$$
+Now compute the expectation:
 
-So now we divide the brownian motion into a series of random variables
+Let $$Z \sim \mathcal{N}(0, \Delta t)$$. Then $$\mathbb{E}[|Z|] = \sqrt{\Delta t} \cdot \sqrt{2/\pi}$$.
 
-Now calculate it's expectation and variation:
+Thus,
 
-$$\mathbb{E}[\sum_{k=0}^{n-1}\Delta B_{t_k}]=\sum_{k=0}^{n-1}\mathbb{E}[\Delta B_{t_k}]=\sum_{k=0}^{n-1}0=0$$
+$$
+\mathbb{E}[V_n] = n \cdot \sqrt{\Delta t} \cdot \sqrt{2/\pi} = \sqrt{n} \cdot \sqrt{T} \cdot \sqrt{2/\pi} = \sqrt{n T} \cdot \sqrt{2/\pi}.
+$$
 
-$$Var(\sum_{k=0}^{n-1}\Delta B_{t_k})=\sum_{k=0}^{n-1}Var(\Delta B_{t_k})=\sum_{k=0}^{n-1}$$
+As $$n \to \infty$$, $$\mathbb{E}[V_n] \to \infty$$.
+
+This shows that the total variation of a Brownian path over $$[0, T]$$ is infinite. The path is continuous but has infinite length—like a fractal curve that wiggles infinitely much at every scale. This is why Brownian paths are nowhere differentiable.
+
+## Quadratic Variation
+
+Now consider the sum of squared increments :
+
+$$
+Q_n = \sum_{k=0}^{n-1} (\Delta B_{t_k})^2.
+$$
+
+This is the **quadratic variation** along the partition.
+
+Expectation:
+
+$$
+\mathbb{E}[Q_n] = \sum_{k=0}^{n-1} \mathbb{E}[(\Delta B_{t_k})^2] = \sum_{k=0}^{n-1} \Delta t = T.
+$$
+
+Variance:
+
+For $$Z \sim \mathcal{N}(0, \Delta t)$$, $$Z^2$$ has variance $$2 (\Delta t)^2$$, so
+
+$$
+\mathrm{Var}(Q_n) = n \cdot 2 (\Delta t)^2 = 2 T^2 / n \to 0 \quad \text{as } n \to \infty.
+$$
+
+Thus, the quadratic variation of Brownian motion over $$[0, T]$$ is finite and equals 0.
+
+Observe that if $$n \to \infty$$, $$\mathbb{E}[(\Delta B_t)^2]=\Delta t \\ \mathrm{Var}((\Delta B_t)^2)=0$$, we can somehow treat $$(\Delta B_t)^2$$ as a number instead of random variable, which leads to the formula that $$dB_t \cdot dB_t=dt$$
