--- a/_posts/2025-02-08-SDE.md
+++ b/_posts/2025-02-08-SDE.md
@@ -13,7 +13,7 @@ toc:
 
 # Stochastic Differential Equations: A Concise Technical Introduction
 
-As a second-year undergraduate in mathematics, I've recently started self-studying stochastic differential equations since it's interesting and applicable to machine learning. While most resources dive quickly into measure-theoretic probability, I found it challenging to find concise, technically accurate summaries that bridge undergraduate calculus/probability and the core machinery of Itô calculus. This post is my attempt to fill that gap. It's written primarily for fellow undergraduates who know real analysis and basic probability but haven't yet taken a full course in stochastic calculus.
+As a second-year undergraduate in mathematics, I've recently started self-studying stochastic differential equations since it's interesting and applicable to machine learning. While most resources dive quickly into measure-theoretic probability, I found it challenging to find concise, technically accurate summaries that bridge undergraduate calculus/probability and the core machinery of Itô calculus. This post is my attempt to fill that gap. It's written primarily for fellow undergraduates who know  basic probability but haven't yet taken a full course in stochastic calculus.
 
 ## Brownian Motion
 
@@ -111,7 +111,7 @@ $$
 Thus
 
 $$
-S_t = S_0 \exp\left( \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t \right).
+S_t = S_0 \exp\left( \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t \right)
 $$
 
 $$S_t$$ is log-normally distributed with
