--- a/_posts/2025-10-07-zod.md
+++ b/_posts/2025-10-07-zod.md
@@ -49,5 +49,9 @@ My tests confirm that these expansions work best for mild departures from normal
 This experience has left me skeptical about using Edgeworth-type expansions for general-purpose density approximation, especially when the shape of the target is unknown or complex. For cases involving distinct modes, other methods will almost certainly be needed.
 
 
-## 2025-12-31
+## 2025-01-13
+
+As I took Math 121B, the professor talked about the eigenvector and eigenvalue which are essentially a transformation of basis such that the linear map will become diagonizable, which will be easier to compute its power and allows to compute its inverse via charateristic polynomial (Cayley–Hamilton).
+
+An idea stucked me. What if for the zeroth order sampling, we first find a manifold (Still don't know what that is) such that the sampling is easy and then do zeroth order sampling on them and then convert back to euclidean space. 
 
