--- a/_posts/2025-02-08-SDE.md
+++ b/_posts/2025-02-08-SDE.md
@@ -11,7 +11,7 @@ toc:
   sidebar: left
 ---
 
-# Stochastic Differential Equations: A Concise Technical Introduction
+# Intro
 
 As a second-year undergraduate in mathematics, I've recently started self-studying stochastic differential equations since it's interesting and applicable to machine learning. While most resources dive quickly into measure-theoretic probability, I found it challenging to find concise, technically accurate summaries that bridge undergraduate calculus/probability and the core machinery of Itô calculus. This post is my attempt to fill that gap. It's written primarily for fellow undergraduates who know  basic probability but haven't yet taken a full course in stochastic calculus.
 
@@ -114,10 +114,43 @@ $$
 S_t = S_0 \exp\left( \left( \mu - \frac{1}{2} \sigma^2 \right) t + \sigma W_t \right)
 $$
 
-$$S_t$$ is log-normally distributed with
+$S_t$ is log-normally distributed with
 
 $$
-\mathbb{E}[S_t] = S_0 e^{\mu t}.
+\mathbb{E}[S_t] = S_0 e^{\mu t}
 $$
 
 
+## Reverse SDE
+
+Given SDE 
+$$
+dX_t = \mu(X_t, t)\, dt + \sigma(X_t, t)\, dW_t, \quad X_0 = x_0.
+$$
+
+This is called the forward process because we can alternatively rewrite this as:
+
+$$p(\mathbf{x}_{t+\Delta t} \mid \mathbf{x}_t) = \mathcal {N}(\mu(x_t,t)\, dt, \sigma(x_t, t)^2\, dt) \propto \exp\left(-\frac{(\mathbf{x}_{t+\Delta t} - \mathbf{x}_t - \mu(x_t,t) dt)^2}{2\sigma(x_t, t)^2 dt}\right)$$
+
+
+Now we want to find the reverse process:
+$$p(\mathbf{x}_t \mid \mathbf{x}_{t+\Delta t}) = \frac{p(\mathbf{x}_{t+\Delta t} \mid \mathbf{x}_t) p(\mathbf{x}_t)}{p(\mathbf{x}_{t+\Delta t})}$$
+
+First take the logarithm:
+
+$$\log p(\mathbf{x}_t \mid \mathbf{x}_{t+\Delta t}) = \log p(\mathbf{x}_{t+\Delta t} \mid \mathbf{x}_t) + \log p(\mathbf{x}_t) - \log p(\mathbf{x}_{t+\Delta t})$$
+
+$$\log p(\mathbf{x}_{t+\Delta t} \mid \mathbf{x}_t) = \log p(\mathbf{x}_t \mid \mathbf{x}_{t+\Delta t}) + \log p(\mathbf{x}_{t+\Delta t}) - \log p(\mathbf{x}_t)$$
+
+$$\log p(\mathbf{x}_{t+\Delta t}) = \log p(\mathbf{x}_t) + \nabla_{\mathbf{x}} \log p(\mathbf{x}_t) \cdot (\mathbf{x}_{t+\Delta t} - \mathbf{x}_t) + O(dt)$$
+
+$$\log p(\mathbf{x}_{t+\Delta t}) - \log p(\mathbf{x}_t) = \nabla_{\mathbf{x}} \log p(\mathbf{x}_t) \cdot (\mu(x_t,t) dt + \sigma(x_t,t) \sqrt{dt} \, \mathbf{z}) + O(dt)$$
+
+substitute back:
+$$
+\begin{align}
+\log p(\mathbf{x}_t \mid \mathbf{x}_{t+\Delta t}) = -\frac{(\mathbf{x}_{t+\Delta t} - \mathbf{x}_t - \mu(x_t,t) dt)^2}{2\sigma(x_t, t)^2 dt}  - \nabla_{\mathbf{x}} \log p(\mathbf{x}_t) \cdot (\mathbf{x}_{t+\Delta t} - \mathbf{x}_t) + \text{const}
+\end{align}
+$$
+
+$$\log p(\mathbf{x}_t \mid \mathbf{x}_{t+\Delta t}) = -\frac{(\Delta \mathbf{x} - \mu dt)^2}{2\sigma^2 dt} - \nabla_{\mathbf{x}} \log p(\mathbf{x}_t) \cdot \Delta \mathbf{x} + \text{const}$$
